# multi-search

./: CHANGELOG.md  README.md  app.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
multi-search/interface/: tui.py
multisearch/: config.py
multisearch/interface/: component.py  input.py  tui.py
