[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "multi-search"
version = "0.0.1"

# [tool.poetry.dependencies]
# # These packages are mandatory and form the core of this package’s distribution.
# mandatory = "^1.0"

# # A list of all of the optional dependencies, some of which are included in the
# # below `extras`. They can be opted into by apps.
# psycopg2 = { version = "^2.9", optional = true }
# mysqlclient = { version = "^1.3", optional = true }

[tool.poetry.scripts]
ms = 'multisearch.interface.tui:main'

[tool.semantic_release]
version_variable = [
    "multisearch/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"